# xorg-libFS

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  libfs.pc.in
doc/: FSlib.txt
include/X11/fonts/: FSlib.h
src/: .cvsignore  FSClServ.c  FSConnServ.c  FSErrDis.c  FSErrHndlr.c  FSFontInfo.c  FSFtNames.c  FSGetCats.c  FSListCats.c  FSListExt.c  FSNextEv.c  FSOpenFont.c  FSOpenServ.c  FSQGlyphs.c  FSQXExt.c  FSQXInfo.c  FSServName.c  FSSetCats.c  FSSync.c  FSSynchro.c  FSlibInt.c  FSlibint.h  FSlibos.h  Makefile.am  fs_transport.c
test/: FSGetErrorText.c
